# openiss-swig

./: CMakeLists.txt  README.md  fixrpathosx.sh
include/: OIDepthFrame.hpp  OIGFrame.hpp  OIGestureData.hpp  OIGestureTracker.hpp  OIGestureType.hpp  OIHand.hpp  OIHandData.hpp  OINiTEGestureTracker.hpp  OINuitrackGestureTracker.hpp  OIState.hpp  OIStatus.hpp
src/: OIGestureData.cpp  OIHand.cpp  OIHandData.cpp  OINiTEGestureTracker.cpp  OINiTEGestureTracker.hpp  OINuitrackGestureTracker.cpp
swig/: CMakeLists.txt  OIDepthFrame.i  OIGFrame.i  OIGestureData.i  OIGestureTracker.i  OIGestureType.i  OIHand.i  OIHandData.i  OINiTEGestureTracker.i  OINuitrackGestureTracker.i  OIState.i  OIStatus.i  main.java  oigesture.i  openiss.i
